[package]
name = "byte-arena"
version = "0.1.2"
edition = "2021"
description = "no_std, no_alloc arena for allocating byte buffers"
authors = ["MrGunflame <git@robbsrv.de>"]
repository = "https://github.com/MrGunflame/byte-arena"
documentation = "https://docs.rs/byte-arena"
license = "MIT OR Apache-2.0"

[dependencies]

[features]
default = ["zero_headers"]
# Zero headers on deallocation.
# Must be used with the fuzzer to detect reuse of already allocated
# memory regions.
zero_headers = []
