[package]
name = "array-arena-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.3.2", features = ["derive"] }

[dependencies.array-arena]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "arena"
path = "fuzz_targets/arena.rs"
test = false
doc = false
